--- a/Serendipity/User Interface/Chat/ChatView.xib
+++ b/Serendipity/User Interface/Chat/ChatView.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChatViewController">
             <connections>
+                <outlet property="bottomContainer" destination="EZB-Ur-pjP" id="Q7i-Lz-DFt"/>
                 <outlet property="topContainer" destination="Ofy-Ld-LBU" id="Y99-gG-ovE"/>
                 <outlet property="view" destination="iN0-l3-epB" id="K7O-w9-zO2"/>
             </connections>
@@ -18,6 +19,10 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ofy-Ld-LBU" userLabel="Top Container">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="476"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EZB-Ur-pjP" userLabel="Bottom Container">
+                    <rect key="frame" x="0.0" y="476" width="320" height="92"/>
+                    <color key="backgroundColor" red="0.95215992647058822" green="0.95215992647058822" blue="0.95215992647058822" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qia-w0-jvz">
                     <rect key="frame" x="30" y="508" width="43" height="30"/>
@@ -40,13 +45,17 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="EZB-Ur-pjP" secondAttribute="trailing" id="3ve-Tc-N4S"/>
                 <constraint firstAttribute="trailing" secondItem="mDR-0z-d2U" secondAttribute="trailing" constant="27" id="7C3-Jy-9Ad"/>
                 <constraint firstItem="Ofy-Ld-LBU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="CWl-Q8-FbY"/>
+                <constraint firstItem="EZB-Ur-pjP" firstAttribute="top" secondItem="Ofy-Ld-LBU" secondAttribute="bottom" id="DV8-Ra-9MR"/>
                 <constraint firstItem="Qia-w0-jvz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="DnP-kg-e7z"/>
                 <constraint firstAttribute="bottom" secondItem="Ofy-Ld-LBU" secondAttribute="bottom" constant="92" id="LbO-b5-o1j"/>
                 <constraint firstItem="Qia-w0-jvz" firstAttribute="baseline" secondItem="mDR-0z-d2U" secondAttribute="baseline" id="SdJ-LT-F0M"/>
+                <constraint firstAttribute="bottom" secondItem="EZB-Ur-pjP" secondAttribute="bottom" id="bUP-Z7-kYh"/>
                 <constraint firstItem="Qia-w0-jvz" firstAttribute="top" secondItem="Ofy-Ld-LBU" secondAttribute="bottom" constant="32" id="cYV-4n-GuP"/>
                 <constraint firstAttribute="trailing" secondItem="Ofy-Ld-LBU" secondAttribute="trailing" id="kIb-WQ-FpE"/>
+                <constraint firstItem="EZB-Ur-pjP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ojj-Xb-p61"/>
                 <constraint firstItem="Ofy-Ld-LBU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="xFu-jz-87F"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
