--- a/Serendipity/User Interface/Chat/MessageCell.xib
+++ b/Serendipity/User Interface/Chat/MessageCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -16,14 +16,19 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Ka-4L-4oY">
                         <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                     </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_play" translatesAutoresizingMaskIntoConstraints="NO" id="mRW-Az-PNq">
+                        <rect key="frame" x="30" y="30" width="30" height="30"/>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="3Ka-4L-4oY" secondAttribute="bottom" id="NPM-WQ-lCR"/>
+                <constraint firstItem="3Ka-4L-4oY" firstAttribute="centerX" secondItem="mRW-Az-PNq" secondAttribute="centerX" id="Ocz-Vt-6un"/>
                 <constraint firstItem="3Ka-4L-4oY" firstAttribute="leading" secondItem="Py2-yb-Bjy" secondAttribute="leading" id="PJ4-xF-NSW"/>
                 <constraint firstAttribute="trailing" secondItem="3Ka-4L-4oY" secondAttribute="trailing" id="RS9-SX-tYX"/>
+                <constraint firstItem="3Ka-4L-4oY" firstAttribute="centerY" secondItem="mRW-Az-PNq" secondAttribute="centerY" id="hJ9-74-Ujm"/>
                 <constraint firstItem="3Ka-4L-4oY" firstAttribute="top" secondItem="Py2-yb-Bjy" secondAttribute="top" id="zgw-31-Kjj"/>
             </constraints>
             <connections>
@@ -32,4 +37,7 @@
             <point key="canvasLocation" x="307" y="319"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="ic_play" width="30" height="30"/>
+    </resources>
 </document>
