--- a/Ketch/UserInterface/Game/GameView.xib
+++ b/Ketch/UserInterface/Game/GameView.xib
@@ -55,14 +55,14 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="607"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="game-bucket-anchor-white" translatesAutoresizingMaskIntoConstraints="NO" id="o6p-MY-cjB" userLabel="Skip Slot">
-                    <rect key="frame" x="19" y="200" width="100" height="100"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="game-bucket-marry" translatesAutoresizingMaskIntoConstraints="NO" id="Iti-rA-q5V" userLabel="Marry Slot">
+                    <rect key="frame" x="123" y="51" width="128" height="148"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="game-bucket-keep-white" translatesAutoresizingMaskIntoConstraints="NO" id="u8F-ne-eBp" userLabel="Keep Slot">
-                    <rect key="frame" x="257" y="200" width="100" height="100"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="game-bucket-skip" translatesAutoresizingMaskIntoConstraints="NO" id="o6p-MY-cjB" userLabel="Skip Slot">
+                    <rect key="frame" x="8" y="168" width="128" height="144"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="game-bucket-knot-white" translatesAutoresizingMaskIntoConstraints="NO" id="Iti-rA-q5V" userLabel="Marry Slot">
-                    <rect key="frame" x="137" y="90" width="100" height="100"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="game-bucket-keep" translatesAutoresizingMaskIntoConstraints="NO" id="u8F-ne-eBp" userLabel="Keep Slot">
+                    <rect key="frame" x="239" y="168" width="128" height="144"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Lu-FI-gAz" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="9" y="468" width="100" height="100"/>
@@ -74,7 +74,7 @@
                     <rect key="frame" x="267" y="468" width="100" height="100"/>
                 </imageView>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MMH-Ka-VtK" userLabel="Ready Prompt" customClass="TransparentView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="75" y="320" width="224.5" height="107"/>
+                    <rect key="frame" x="75" y="330" width="224.5" height="107"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsh-wd-hgi" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="224.5" height="62"/>
@@ -115,7 +115,7 @@
             </subviews>
             <color key="backgroundColor" red="0.043137254901960784" green="0.89803921568627454" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="MMH-Ka-VtK" secondAttribute="centerY" constant="-70" id="BDE-DX-5xb"/>
+                <constraint firstAttribute="centerY" secondItem="MMH-Ka-VtK" secondAttribute="centerY" constant="-80" id="BDE-DX-5xb"/>
                 <constraint firstAttribute="centerX" secondItem="MMH-Ka-VtK" secondAttribute="centerX" id="Ebu-2F-eZF"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -221,9 +221,9 @@ SAILED FOR TODAY.</string>
     </objects>
     <resources>
         <image name="game-arrow-down" width="27" height="35"/>
-        <image name="game-bucket-anchor-white" width="105" height="101"/>
-        <image name="game-bucket-keep-white" width="105" height="101"/>
-        <image name="game-bucket-knot-white" width="105" height="101"/>
+        <image name="game-bucket-keep" width="128" height="144"/>
+        <image name="game-bucket-marry" width="128" height="148"/>
+        <image name="game-bucket-skip" width="128" height="144"/>
         <image name="game-empty-share-facebook" width="61" height="61"/>
         <image name="game-empty-share-sms" width="60" height="61"/>
         <image name="game-empty-share-twitter" width="60" height="61"/>
