--- a/Ketch/UserInterface/Game/GameView.xib
+++ b/Ketch/UserInterface/Game/GameView.xib
@@ -56,41 +56,68 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="game-bucket-marry" translatesAutoresizingMaskIntoConstraints="NO" id="Iti-rA-q5V" userLabel="Marry Slot">
-                    <rect key="frame" x="137.5" y="70.5" width="100" height="116"/>
+                    <rect key="frame" x="137" y="70" width="100" height="116"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="116" id="BgZ-pN-z9P"/>
                         <constraint firstAttribute="width" constant="100" id="C1t-ms-gcW"/>
+                        <constraint firstAttribute="width" secondItem="Iti-rA-q5V" secondAttribute="height" multiplier="25:29" id="XcJ-0i-uIM"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="BgZ-pN-z9P"/>
+                            <exclude reference="C1t-ms-gcW"/>
+                        </mask>
+                    </variation>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="game-bucket-keep" translatesAutoresizingMaskIntoConstraints="NO" id="u8F-ne-eBp" userLabel="Keep Slot">
-                    <rect key="frame" x="247" y="196.5" width="100" height="113"/>
+                    <rect key="frame" x="247" y="196" width="100" height="113"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="113" id="Roo-cD-i4m"/>
                         <constraint firstAttribute="width" constant="100" id="dRJ-gd-KGL"/>
+                        <constraint firstAttribute="width" secondItem="u8F-ne-eBp" secondAttribute="height" multiplier="100:113" id="kP6-vQ-Ij1"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Roo-cD-i4m"/>
+                            <exclude reference="dRJ-gd-KGL"/>
+                        </mask>
+                    </variation>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="game-bucket-skip" translatesAutoresizingMaskIntoConstraints="NO" id="o6p-MY-cjB" userLabel="Skip Slot">
-                    <rect key="frame" x="29" y="196.5" width="100" height="113"/>
+                    <rect key="frame" x="29" y="196" width="100" height="113"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="9J5-kj-Gqo"/>
+                        <constraint firstAttribute="width" secondItem="o6p-MY-cjB" secondAttribute="height" multiplier="100:113" id="By2-lx-zgt"/>
                         <constraint firstAttribute="height" constant="113" id="PBK-A8-jE4"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="9J5-kj-Gqo"/>
+                            <exclude reference="PBK-A8-jE4"/>
+                        </mask>
+                    </variation>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Lu-FI-gAz" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="9" y="467" width="100" height="100"/>
+                    <rect key="frame" x="8" y="467" width="100" height="100"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k7t-mm-QgH" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="137.5" y="467" width="100" height="100"/>
+                    <rect key="frame" x="137" y="467" width="100" height="100"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="100" id="S7c-FT-dPY"/>
+                        <constraint firstAttribute="width" secondItem="k7t-mm-QgH" secondAttribute="height" multiplier="1:1" id="4Df-x2-5O1"/>
+                        <constraint firstAttribute="width" priority="751" constant="100" id="S7c-FT-dPY"/>
                         <constraint firstAttribute="height" constant="100" id="bxZ-po-cC2"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="bxZ-po-cC2"/>
+                        </mask>
+                    </variation>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FWx-3L-EJd" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="267" y="467" width="100" height="100"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MMH-Ka-VtK" userLabel="Ready Prompt" customClass="TransparentView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="75.5" y="360" width="224.5" height="107"/>
+                    <rect key="frame" x="75" y="359" width="224.5" height="107"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsh-wd-hgi" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="224.5" height="62"/>
@@ -135,6 +162,7 @@
                 <constraint firstAttribute="bottom" secondItem="k7t-mm-QgH" secondAttribute="bottom" priority="251" constant="40" id="3hH-dY-jIX"/>
                 <constraint firstItem="k7t-mm-QgH" firstAttribute="height" secondItem="1Lu-FI-gAz" secondAttribute="height" id="3xa-Hu-NcU"/>
                 <constraint firstAttribute="trailing" secondItem="FWx-3L-EJd" secondAttribute="trailing" constant="8" id="4ma-Ee-Ybc"/>
+                <constraint firstItem="Iti-rA-q5V" firstAttribute="width" secondItem="u8F-ne-eBp" secondAttribute="width" id="7Vl-4S-Yjc"/>
                 <constraint firstAttribute="centerY" secondItem="Iti-rA-q5V" secondAttribute="centerY" priority="252" constant="175" id="8RV-PX-PNw"/>
                 <constraint firstItem="k7t-mm-QgH" firstAttribute="height" secondItem="FWx-3L-EJd" secondAttribute="height" id="B2d-Pl-UCu"/>
                 <constraint firstAttribute="centerY" secondItem="MMH-Ka-VtK" secondAttribute="centerY" priority="251" constant="-80" id="BDE-DX-5xb"/>
@@ -146,11 +174,15 @@
                 <constraint firstItem="k7t-mm-QgH" firstAttribute="width" secondItem="1Lu-FI-gAz" secondAttribute="width" id="OeY-wf-qFW"/>
                 <constraint firstAttribute="centerX" secondItem="k7t-mm-QgH" secondAttribute="centerX" id="Per-M4-CzZ"/>
                 <constraint firstItem="MMH-Ka-VtK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="u8F-ne-eBp" secondAttribute="bottom" constant="50" id="VFD-l8-MSl"/>
+                <constraint firstItem="k7t-mm-QgH" firstAttribute="width" secondItem="Iti-rA-q5V" secondAttribute="width" id="eok-08-XJ3"/>
                 <constraint firstItem="o6p-MY-cjB" firstAttribute="top" secondItem="u8F-ne-eBp" secondAttribute="top" id="hU4-XS-Bt1"/>
                 <constraint firstItem="o6p-MY-cjB" firstAttribute="top" secondItem="Iti-rA-q5V" secondAttribute="bottom" constant="10" id="j7w-yX-IMo"/>
-                <constraint firstItem="Iti-rA-q5V" firstAttribute="top" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="top" id="pbb-Yk-y1d"/>
+                <constraint firstItem="Iti-rA-q5V" firstAttribute="top" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="top" constant="36" id="pbb-Yk-y1d"/>
+                <constraint firstItem="o6p-MY-cjB" firstAttribute="width" secondItem="Iti-rA-q5V" secondAttribute="width" id="rs1-FL-xrw"/>
                 <constraint firstItem="k7t-mm-QgH" firstAttribute="top" relation="greaterThanOrEqual" secondItem="u8F-ne-eBp" secondAttribute="bottom" constant="70" id="t7s-PP-qFf"/>
-                <constraint firstItem="1Lu-FI-gAz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="9" id="uI2-NL-uwh"/>
+                <constraint firstItem="1Lu-FI-gAz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="uI2-NL-uwh"/>
+                <constraint firstItem="k7t-mm-QgH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1Lu-FI-gAz" secondAttribute="trailing" constant="20" id="vbn-r1-V3D"/>
+                <constraint firstItem="FWx-3L-EJd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="k7t-mm-QgH" secondAttribute="trailing" constant="20" id="wX1-ak-P1u"/>
                 <constraint firstItem="k7t-mm-QgH" firstAttribute="centerY" secondItem="FWx-3L-EJd" secondAttribute="centerY" id="z5o-oI-9Tv"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
